--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-    "branch": "develop",
+    "branch": "master",
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
