--- a/.releaserc
+++ b/.releaserc
@@ -13,7 +13,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "./prepare-release.sh ${nextRelease.version} ${branch}"
+                "prepareCmd": "./prepare-release.sh ${nextRelease.version}"
             }
         ],
         [
